<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/AIChatroomFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.circle.ui.user_profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.example.circle.ui.courses.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses">
        <action
            android:id="@+id/action_navigation_courses_to_navigation_courseVideosFragment"
            app:destination="@id/navigation_courseVideosFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_therapists"
        android:name="com.example.circle.ui.therapists.TherapistsFragment"
        android:label="@string/title_therapists"
        tools:layout="@layout/fragment_therapists">
        <action
            android:id="@+id/action_navigation_therapists_to_scheduleTherapistFragment3"
            app:destination="@id/scheduleTherapistFragment3" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat_rooms"
        android:name="com.example.circle.ui.chatRooms.ChatRoomsFragment"
        android:label="@string/title_chat_rooms"
        tools:layout="@layout/fragment_chat_rooms">
        <action
            android:id="@+id/action_navigation_chat_rooms_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_navigation_chat_rooms_to_AIChatroomFragment"
            app:destination="@id/AIChatroomFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_courseVideosFragment"
        android:name="com.example.circle.ui.courses.CourseVideosFragment"
        android:label="fragment_course_videos"
        tools:layout="@layout/fragment_course_videos" />
    <fragment
        android:id="@+id/scheduleTherapistFragment3"
        android:name="com.example.circle.ui.therapists.ScheduleTherapistFragment"
        android:label="fragment_therapist_schedule"
        tools:layout="@layout/fragment_therapist_schedule" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.circle.ui.chatRooms.chats.ChatFragment"
        android:label="ChatFragment" />
    <fragment
        android:id="@+id/AIChatroomFragment"
        android:name="com.example.circle.ui.aiChatRoom.AIChatroomFragment"
        android:label="AIChatroomFragment" />
</navigation>