<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="362dp">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.286"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/circular_person_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="356dp"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/about"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="413dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="320dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/current_courses"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course1view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed5" />

                    <Button
                        android:id="@+id/course1textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course1"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FDFDFD"
                        android:textSize="16sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course2view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed3" />

                    <Button
                        android:id="@+id/course2textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course2"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course3view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed2" />

                    <Button
                        android:id="@+id/course3textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course3"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course4view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed4" />

                    <Button
                        android:id="@+id/course4textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course4"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/previous_courses"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="22dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course5view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed5" />

                    <Button
                        android:id="@+id/course5textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course5"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FDFDFD"
                        android:textSize="16sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course6view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed3" />

                    <Button
                        android:id="@+id/course6textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course6"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course7view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed2" />

                    <Button
                        android:id="@+id/course7textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course7"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/course8view"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:src="@drawable/unnamed4" />

                    <Button
                        android:id="@+id/course8textview"
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="8sp"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="14"
                        android:singleLine="false"
                        android:text="@string/course8"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:backgroundTint="#00FFFFFF"
                        app:elevation="2dp"
                        app:rippleColor="#FFFFFF" />
                </FrameLayout>
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>


    <!-- Courses taken -->

</LinearLayout>